--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -87,24 +87,25 @@ jobs:
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
 
-  run-e2e-test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' },
-                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python' },
-                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java' },
-                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python' },
-                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python' },
-                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java' },
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python' },
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java' },
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all' } ]
-    steps:
-      - name: Run Java K8s Test
-        uses: ./.github/workflows/python-k8s-e2e-test.yml
-        with:
-          # To run in more regions, a cluster must be provisioned manually on EC2 instances in that region
-          aws-region: 'us-east-1'
-          caller-workflow-name: 'appsignals-e2e-python-k8s-canary-test'
+#  run-e2e-test:
+#    needs: create-k8s-on-ec2
+#    runs-on: ubuntu-latest
+#    strategy:
+#      matrix:
+#        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' },
+#                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python' },
+#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java' },
+#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python' },
+#                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python' },
+#                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java' },
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python' },
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java' },
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all' } ]
+#    steps:
+#      - name: Run Java K8s Test
+#        uses: ./.github/workflows/python-k8s-e2e-test.yml
+#        with:
+#          # To run in more regions, a cluster must be provisioned manually on EC2 instances in that region
+#          aws-region: 'us-east-1'
+#          caller-workflow-name: 'appsignals-e2e-python-k8s-canary-test'
 
