--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -22,15 +22,15 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java'},
-                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python'},
-                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java'},
-                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python'},
-                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python'},
-                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java'},
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python'},
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java'},
-                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all'} ]
+        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' ]
+#                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python'},
+#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java'},
+#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python'},
+#                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python'},
+#                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java'},
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python'},
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java'},
+#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all'} ]
     steps:
       - name: Generate Testing ID
         run: |
@@ -53,8 +53,8 @@ jobs:
       - name: Check if Secret Key Already Exist and If Not Create New Ones
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint-temporary-update"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key-temporary-update"
           )
           
           for SECRET_NAME in "${SECRET_NAMES[@]}"; do
@@ -73,8 +73,8 @@ jobs:
         working-directory: .github/workflows/util
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint-temporary-update"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key-temporary-update"
           )
           
           private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-key-pair-${{ env.TESTING_ID }}.pem
@@ -87,25 +87,47 @@ jobs:
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
 
-#  run-e2e-test:
-#    needs: create-k8s-on-ec2
-#    runs-on: ubuntu-latest
-#    strategy:
-#      matrix:
-#        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' },
-#                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python' },
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java' },
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python' },
-#                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python' },
-#                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java' },
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python' },
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java' },
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all' } ]
-#    steps:
-#      - name: Run Java K8s Test
-#        uses: ./.github/workflows/python-k8s-e2e-test.yml
-#        with:
-#          # To run in more regions, a cluster must be provisioned manually on EC2 instances in that region
-#          aws-region: 'us-east-1'
-#          caller-workflow-name: 'appsignals-e2e-python-k8s-canary-test'
+      - name: Run Java K8s Test
+        uses: ./.github/workflows/python-k8s-e2e-test.yml
+        with:
+          # To run in more regions, a cluster must be provisioned manually on EC2 instances in that region
+          aws-region: 'us-east-1'
+          caller-workflow-name: 'appsignals-e2e-python-k8s-canary-test'
+
+      - name: Check if Secret Key Already Exist and If Not Create New Ones
+        run: |
+          SECRET_NAMES=(
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+          )
+
+          for SECRET_NAME in "${SECRET_NAMES[@]}"; do
+            echo "Checking secret: $SECRET_NAME"
+
+            secret_exists=$(aws secretsmanager describe-secret --secret-id $SECRET_NAME --query 'ARN' --output text 2>/dev/null)
+
+            if [ -z "$secret_exists" ]; then
+              echo "Secret does not exist. Creating new secret"
+              aws secretsmanager create-secret --name $SECRET_NAME --secret-string ""
+            fi
+          done
+
+      - name: Save Private Key and Master Public Endpoint to Secret Manager
+        working-directory: .github/workflows/util
+        run: |
+          SECRET_NAMES=(
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
+            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+          )
+
+          private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-key-pair-${{ env.TESTING_ID }}.pem
+
+          master_public_ip=$(aws ec2 describe-instances \
+            --filters "Name=tag:Name,Values=$MASTER_INSTANCE_NAME" "Name=instance-state-name,Values=running" \
+            --query "Reservations[*].Instances[*].PublicIpAddress" \
+            --output text)
+
+          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
+          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
+
 
