--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' ]
+        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' }]
 #                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python'},
 #                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java'},
 #                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python'},
