--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -60,10 +60,8 @@ jobs:
           for SECRET_NAME in "${SECRET_NAMES[@]}"; do
             echo "Checking secret: $SECRET_NAME"
           
-            secret_manager_output=""
-            aws secretsmanager describe-secret --secret-id $SECRET_NAME >/dev/null 2>&1
-          
-            if [ $? -eq 0 ]; then
+        
+            if aws secretsmanager describe-secret --secret-id $SECRET_NAME; then
               echo "Success: The secret exists."
             else
               echo "Secret does not exist. Creating new secret"
