--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -86,8 +86,8 @@ jobs:
             --query "Reservations[*].Instances[*].PublicIpAddress" \
             --output text)
           
-          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
-          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
+#          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
+          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string $master_public_ip
 
       - name: Run Java K8s Test
         uses: ./.github/workflows/python-k8s-e2e-test.yml
