--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -66,10 +66,8 @@ jobs:
             else
               echo "Secret does not exist. Creating new secret"
               aws secretsmanager create-secret --name $SECRET_NAME --secret-string " "
-            fi
-  
-          done
-          
+            fi      
+      
 
       - name: Save Private Key and Master Public Endpoint to Secret Manager
         working-directory: .github/workflows/util
@@ -80,9 +78,11 @@ jobs:
           )
           
           private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-key-pair-${{ env.TESTING_ID }}.pem
+               
+          
           
           master_public_ip=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=$MASTER_INSTANCE_NAME" "Name=instance-state-name,Values=running" \
+            --filters "Name=tag:Name,Values=k8s-on-ec2-${{ matrix.instance.ec2_name }}-master-${{ env.TESTING_ID }}" "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].PublicIpAddress" \
             --output text)
           
