--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -82,10 +82,11 @@ jobs:
           
           
           master_public_ip=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=k8s-on-ec2-${{ matrix.instance.ec2_name }}-master-${{ env.TESTING_ID }}" "Name=instance-state-name,Values=running" \
+            --filters "Name=tag:Name,Values=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-master-${{ env.TESTING_ID }}" "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].PublicIpAddress" \
             --output text)
           
+          echo $master_public_ip
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string $master_public_ip
 
       - name: Run Java K8s Test
