--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -66,7 +66,8 @@ jobs:
             else
               echo "Secret does not exist. Creating new secret"
               aws secretsmanager create-secret --name $SECRET_NAME --secret-string " "
-            fi      
+            fi
+          done
       
 
       - name: Save Private Key and Master Public Endpoint to Secret Manager
