--- a/.github/workflows/update-k8s-instance.yml
+++ b/.github/workflows/update-k8s-instance.yml
@@ -79,7 +79,7 @@ jobs:
           )
           
           ls
-          
+          private_key_file=k8s-on-ec2-test-key-pair-test.pem
           private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-key-pair-${{ env.TESTING_ID }}.pem
           private_key_content=$(<"$private_key_file")
           
@@ -88,7 +88,11 @@ jobs:
             --query "Reservations[*].Instances[*].PublicIpAddress" \
             --output text)
           
+          echo $master_public_ip
+          
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string $master_public_ip
+          echo "Done"
+          echo $private_key_content
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string $private_key_content
 
       - name: Run Java K8s Test
