--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -3,16 +3,26 @@
 name: Update K8s EC2 Instance
 
 on:
-#  schedule:
-#    - cron: '0 0 1 * *' # run the workflow beginning of every month
-#  workflow_dispatch: # be able to run the workflow on demand
-  push:
-
+  workflow_call:
+    env:
+      repo:
+        required: true
+        type: string
+      ec2_name:
+        required: true
+        type: string
+      language:
+        required: true
+        type: string      
+      
 permissions:
   id-token: write
   contents: read
 
 env:
+  REPO: ${{ inputs.repo }}
+  EC2_NAME: ${{ inputs.ec2_name }}
+  LANGUAGE:  ${{ inputs.language }}
   E2E_TEST_AWS_REGION: us-east-1
   E2E_TEST_ACCOUNT_ID: ${{ secrets.APPLICATION_SIGNALS_E2E_TEST_ACCOUNT_ID }}
   E2E_TEST_ROLE_NAME: ${{ secrets.APPLICATION_SIGNALS_E2E_TEST_ROLE_NAME }}
@@ -20,17 +30,6 @@ env:
 jobs:
   create-k8s-on-ec2:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        instance: [ { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'java' }]
-#                    { repo: 'amazon-cloudwatch-agent-operator', ec2_name: 'cw-agent-operator-release', language: 'python'},
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'java'},
-#                    { repo: 'amazon-cloudwatch-agent', ec2_name: 'cw-agent-release', language: 'python'},
-#                    { repo: 'aws-otel-python-instrumentation', ec2_name: 'adot-python-release', language: 'python'},
-#                    { repo: 'aws-otel-java-instrumentation', ec2_name: 'adot-java-release', language: 'java'},
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'python-canary', language: 'python'},
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'java-canary', language: 'java'},
-#                    { repo: 'aws-application-signals-test-framework', ec2_name: 'e2e-playground', language: 'all'} ]
     steps:
       - name: Generate Testing ID
         run: |
@@ -48,13 +47,13 @@ jobs:
       - name: Create New K8s on EC2
         working-directory: .github/workflows/util
         run: |
-          ./setup-k8s.sh ${{ env.TESTING_ID }} ${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }} ${{ env.E2E_TEST_AWS_REGION }}
+          ./setup-k8s.sh ${{ env.TESTING_ID }} ${{ env.EC2_NAME }}-${{ env.LANGUAGE }} ${{ env.E2E_TEST_AWS_REGION }}
 
       - name: Check if Secret Key Already Exist and If Not Create New Ones
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint-temporary-update"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key-temporary-update"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-update"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key-temporary-update"
           )
           
           for SECRET_NAME in "${SECRET_NAMES[@]}"; do
@@ -74,17 +73,17 @@ jobs:
         working-directory: .github/workflows/util
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint-temporary-update"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key-temporary-update"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint-temporary-update"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key-temporary-update"
           )
           
           ls
           private_key_file=k8s-on-ec2-test-key-pair-test.pem
-          private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-key-pair-${{ env.TESTING_ID }}.pem
+          private_key_file=k8s-on-ec2-${{ env.EC2_NAME }}-${{ env.LANGUAGE }}-key-pair-${{ env.TESTING_ID }}.pem
           private_key_content=$(<"$private_key_file")
           
           master_public_ip=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=k8s-on-ec2-${{ matrix.instance.ec2_name }}-${{ matrix.instance.language }}-master-${{ env.TESTING_ID }}" "Name=instance-state-name,Values=running" \
+            --filters "Name=tag:Name,Values=k8s-on-ec2-${{ env.EC2_NAME }}-${{ env.LANGUAGE }}-master-${{ env.TESTING_ID }}" "Name=instance-state-name,Values=running" \
             --query "Reservations[*].Instances[*].PublicIpAddress" \
             --output text)
           
@@ -94,6 +93,8 @@ jobs:
           echo "Done"
           echo $private_key_content
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string "$private_key_content"
+  
+  
 
       - name: Run Java K8s Test
         uses: ./.github/workflows/python-k8s-e2e-test.yml
@@ -105,8 +106,8 @@ jobs:
       - name: Check if Secret Key Already Exist and If Not Create New Ones
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
           )
 
           for SECRET_NAME in "${SECRET_NAMES[@]}"; do
@@ -124,11 +125,11 @@ jobs:
         working-directory: .github/workflows/util
         run: |
           SECRET_NAMES=(
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-master-node-endpoint"
-            "e2e-test/${{ matrix.instance.repo }}/${{ matrix.instance.language }}-k8s-ssh-key"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
+            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
           )
 
-          private_key_file=k8s-on-ec2-${{ matrix.instance.ec2_name }}-key-pair-${{ env.TESTING_ID }}.pem
+          private_key_file=k8s-on-ec2-${{ env.EC2_NAME }}-key-pair-${{ env.TESTING_ID }}.pem
 
           master_public_ip=$(aws ec2 describe-instances \
             --filters "Name=tag:Name,Values=$MASTER_INSTANCE_NAME" "Name=instance-state-name,Values=running" \
