--- a/.github/workflows/k8s-patch-os-matrix.yml
+++ b/.github/workflows/k8s-patch-os-matrix.yml
@@ -13,7 +13,7 @@ permissions:
   contents: read
 
 jobs:
-  create-k8s-on-ec2:
+  k8s-patch-os:
     strategy:
       fail-fast: false
       matrix:
