--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -95,54 +95,54 @@ jobs:
           echo $private_key_content
           aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string "$private_key_content"
   
-  run-k8s-test:
-    uses: ./.github/workflows/k8s-patch-os-jobs.yml
-    secrets: inherit
-    with:
-      repo: ${{ matrix.instance.repo }}
-      ec2_name: ${{ matrix.instance.ec2_name }}
-      language: ${{ matrix.instance.language }}
-
-  update-secrets:
-    runs-on: ubuntu-latest
-    steps:
-
-
-
-      - name: Check if Secret Key Already Exist and If Not Create New Ones
-        run: |
-          SECRET_NAMES=(
-            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
-            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
-          )
-
-          for SECRET_NAME in "${SECRET_NAMES[@]}"; do
-            echo "Checking secret: $SECRET_NAME"
-
-            secret_exists=$(aws secretsmanager describe-secret --secret-id $SECRET_NAME --query 'ARN' --output text 2>/dev/null)
-
-            if [ -z "$secret_exists" ]; then
-              echo "Secret does not exist. Creating new secret"
-              aws secretsmanager create-secret --name $SECRET_NAME --secret-string ""
-            fi
-          done
-
-      - name: Save Private Key and Master Public Endpoint to Secret Manager
-        working-directory: .github/workflows/util
-        run: |
-          SECRET_NAMES=(
-            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
-            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
-          )
-
-          private_key_file=k8s-on-ec2-${{ env.EC2_NAME }}-key-pair-${{ env.TESTING_ID }}.pem
-
-          master_public_ip=$(aws ec2 describe-instances \
-            --filters "Name=tag:Name,Values=$MASTER_INSTANCE_NAME" "Name=instance-state-name,Values=running" \
-            --query "Reservations[*].Instances[*].PublicIpAddress" \
-            --output text)
-
-          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
-          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
+#  run-k8s-test:
+#    uses: ./.github/workflows/k8s-patch-os-jobs.yml
+#    secrets: inherit
+#    with:
+#      repo: ${{ matrix.instance.repo }}
+#      ec2_name: ${{ matrix.instance.ec2_name }}
+#      language: ${{ matrix.instance.language }}
+#
+#  update-secrets:
+#    runs-on: ubuntu-latest
+#    steps:
+#
+#
+#
+#      - name: Check if Secret Key Already Exist and If Not Create New Ones
+#        run: |
+#          SECRET_NAMES=(
+#            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
+#            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
+#          )
+#
+#          for SECRET_NAME in "${SECRET_NAMES[@]}"; do
+#            echo "Checking secret: $SECRET_NAME"
+#
+#            secret_exists=$(aws secretsmanager describe-secret --secret-id $SECRET_NAME --query 'ARN' --output text 2>/dev/null)
+#
+#            if [ -z "$secret_exists" ]; then
+#              echo "Secret does not exist. Creating new secret"
+#              aws secretsmanager create-secret --name $SECRET_NAME --secret-string ""
+#            fi
+#          done
+#
+#      - name: Save Private Key and Master Public Endpoint to Secret Manager
+#        working-directory: .github/workflows/util
+#        run: |
+#          SECRET_NAMES=(
+#            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-master-node-endpoint"
+#            "e2e-test/${{ env.REPO }}/${{ env.LANGUAGE }}-k8s-ssh-key"
+#          )
+#
+#          private_key_file=k8s-on-ec2-${{ env.EC2_NAME }}-key-pair-${{ env.TESTING_ID }}.pem
+#
+#          master_public_ip=$(aws ec2 describe-instances \
+#            --filters "Name=tag:Name,Values=$MASTER_INSTANCE_NAME" "Name=instance-state-name,Values=running" \
+#            --query "Reservations[*].Instances[*].PublicIpAddress" \
+#            --output text)
+#
+#          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[0]}" --secret-string file://$private_key_file
+#          aws secretsmanager update-secret --secret-id "${SECRET_NAMES[1]}" --secret-string file://$master_public_ip
 
 
