--- a/.github/workflows/k8s-patch-os-jobs.yml
+++ b/.github/workflows/k8s-patch-os-jobs.yml
@@ -97,6 +97,7 @@ jobs:
   
   run-java-k8s-test:
     if: ${{ inputs.LANGUAGE == 'java' }}
+    needs: create-k8s-on-ec2
     uses: ./.github/workflows/java-k8s-e2e-test.yml
     secrets: inherit
     with:
@@ -105,7 +106,8 @@ jobs:
 
   run-python-k8s-test:
     if: ${{ inputs.LANGUAGE == 'python' }}
-    uses: ./.github/workflows/java-k8s-e2e-test.yml
+    needs: create-k8s-on-ec2
+    uses: ./.github/workflows/python-k8s-e2e-test.yml
     secrets: inherit
     with:
       aws-region: 'us-east-1'
